# release-exporter

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  compose.yml  sample-conf.yml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
src/: baseurl.rs  cache.rs  checks.rs  main.rs  metrics.rs  providers.rs  release_collection.rs  serde_url.rs  test_config.rs
src/checks/: upgrade_pending.rs
src/providers/: error.rs  github.rs  prometheus.rs  version_extractor.rs
wiremock/__files/github/: latest_release.json
wiremock/__files/prometheus/: dmarc_metrics_exporter_build_info.json
wiremock/mappings/: github.json  prometheus.json
