[package]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
description = "Retrieves release information and exports related metrics."
edition = "2021"
exclude = [
  ".github/*",
  "wiremock/*",
  "compose.yml",
]
keywords = ["Github", "Prometheus", "release"]
license = "MIT OR Apache-2.0"
name = "release-exporter"
readme = "README.md"
repository = "https://github.com/jgosmann/release-exporter"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["attributes", "tokio1"]}
clap = {version = "4.0.32", features = ["derive"]}
futures = "0.3.25"
prometheus-client = "0.19.0"
regex = "1.7.0"
reqwest = {version = "0.11.13", features = ["json"]}
serde = {version = "1.0.152", features = ["derive"]}
serde_regex = "1.1.0"
serde_yaml = "0.9.16"
thiserror = "1.0.38"
tide = "0.16.0"
tokio = {version = "1.23.0", features = ["macros"]}
tokio-stream = "0.1.11"
url = "2.3.1"

[dev-dependencies]
serde_test = "1.0.152"
