[package]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
description = "Retrieves release information and exports related metrics."
edition = "2021"
exclude = [
  ".github/*",
  "wiremock/*",
  "compose.yml",
]
keywords = ["Github", "Prometheus", "release"]
license = "MIT OR Apache-2.0"
name = "release-exporter"
readme = "README.md"
repository = "https://github.com/jgosmann/release-exporter"
version = "0.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1", features = ["attributes", "tokio1"]}
clap = {version = "4.4.8", features = ["derive"]}
futures = "0.3.29"
prometheus-client = "0.22.0"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["json"]}
serde = {version = "1.0.192", features = ["derive"]}
serde_regex = "1.1.0"
serde_yaml = "0.9.27"
thiserror = "1.0.50"
tide = "0.16.0"
tokio = {version = "1.34.0", features = ["macros"]}
tokio-stream = "0.1.14"
url = "2.4.1"

[dev-dependencies]
serde_test = "1.0.176"
